--- a/aplication/src/App.css
+++ b/aplication/src/App.css
@@ -1,3 +1,14 @@
+body {
+  margin: 0;
+  background-color: #252525;
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+#root{
+  width: 100%;
+}
 /* ************** LOGIN PAGE ******************* */
 .App-logo-Login{
   width: 15%;
@@ -64,13 +75,24 @@
 }
 
 .navButton{
-  margin: 20px;
+  margin: 10px;
   height: 50px;
-  width: 100px;
+  width: 900px;
   border-radius: 15px;
   border: solid #FFD505 1px;
   background: #252525;
   font-size:medium;
+  cursor: pointer;
+}
+
+.navButton:hover {
+  background: #2079b0;
+  background-image: -webkit-linear-gradient(top, #F37328, #252525);
+  background-image: -moz-linear-gradient(top, #F37328, #252525);
+  background-image: -ms-linear-gradient(top,  #F37328, #252525);
+  background-image: -o-linear-gradient(top,  #F37328, #252525);
+  background-image: linear-gradient(to bottom,  #F37328, #252525);
+  text-decoration: none;
 }
 
 .linkButton{
@@ -79,8 +101,14 @@
 
 }
 
+.linkAdminUser{
+  color: white;
+  text-decoration: none;
+}
+
 .container{
-  height: 140px;
+  height: 20%;
+  width: 100%;
 }
 
 .App-logo{
@@ -95,42 +123,79 @@
 .containerAllMenu{
   margin: 10px;
   padding-top: 0;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 0px;
+  padding-right: 10px;
   border: solid #FFD505 1px;
   border-bottom-style: none;
   border-left-style: none;
   border-right-style: none;
-  
+  height: 100%;  
+  width: 100%;
 
 }
 .sectionAllMenu{
   display: inline-flex;
-  width: 49.5%;
-  height: 500px;  
+  height: 100%;  
+  width: 100%;
   float: left;
   border: solid #FFD505 1px;
   border-bottom-style: none;
   border-top-style: none;
   border-left-style: none;
+  width: 52%;
+  flex-direction: column;
 }
 
-.containerPedidos{
-  display: inline-block;
-  width: 50%;
-  height: 500px; 
+.sectionbtnMenu{
+  display: inline-flex;
+  margin-top: 10px;
+  height: 10%;
+  width: 100%;
+  justify-content: space-around;
 }
 
-  .btnMenu{
-  margin: 15px;
+.btnMenu{
+  /* margin: 15px; */
   height: 50px;
   width: 120px;
   border-radius: 15px;
   border: solid #FFD505 1px;
   background: #252525;  
   color: white;
-  font-size: 12px;
+  font-size: 12px;  
 }
+
+.btnMenu:focus{
+  background-color: #778472;
+}
+
+
+
+.menuDesplegable{
+  display: inline-flex;
+  flex-wrap: wrap;
+  /* margin: 0 auto; */
+  width: 100%;
+  justify-content: flex-start;
+}
+
+.btnListMenu{
+  width: 100px;
+  height: 60px;
+  justify-content: space-evenly;
+  border-radius: 10px;
+  margin: 7px;
+  background: white;
+  font-style: unset;
+}
+
+.containerPedidos{
+  display: inline-block;
+  width: 45%;
+  height: 500px; 
+}
+
+
 
 .lblPedido{
   margin-top: 30px;
@@ -180,42 +245,289 @@
   margin-top: 60px;
 }
 
-
-/* .App {
-  text-align: center;
+/* ****************ADMIN PAGE************** */
+.sectionbtnAdmin{
+  border: solid #FFD505 1px;
+  height: 400px;
+  border-bottom-style: none;
+  border-left-style: none;
+  border-right-style: none;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.btn-Admin{
+  width: 35%;
+  height: 50%;
+  border-radius: 15px;
+  border: solid #FFD505 1.5px;
+  background: #252525;
+  font-size:x-large;
+  color: white;
+  margin-top: 80px;
+  margin-left: 100px; 
+  font-size: 30px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+#faUsers{
+  font-size: 60px;
+  display: block;  
+  margin: auto;
+}
+
+#faHamburger{
+  font-size: 60px;
+  display: block;  
+  margin: auto;
+}
+
+.svg-inline--fa.fa-w-14 {
+  width: 0.875em;
+  color: #F37328;
+}
+
+.svg-inline--fa.fa-w-12 {
+  width: 0.75em;
+  margin-right: 6px;
+}
+
+.svg-inline--fa.fa-w-18 {
+  font-size: 15px;
+  margin-right: 4px;
+}
+
+.svg-inline--fa.fa-w-20 {
+  display: inline-block;
+  font-size: 15px;
+  margin-right: 4px;
+}
+
+.svg-inline--fa.fa-w-13 {
+  font-size: 15px;
+  margin-right: 4px;
+}
+
+.svg-inline--fa.fa-w-16 {
+  font-size: 15px;
+  display: inline-block;
+  margin-right: 4px;
+}
+thead{
+  background-color: #C27B51;
+}
+
+tbody{
+  background-color: white;
+}
+
+table {
+  width: 80%;
+
+
+}
+
+.tableProducts{
+  width: 100%;
+
+}
+th, td {
+ overflow: auto; 
+ text-align: center;
+ white-space:nowrap;
+ font-size: 10px;
+ 
+}
+
+th{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.thType{
+  width: 5%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
+.thID{
+  width: 10%;
+}
+
+.thName{
+  width: 7%
+}
+
+.thPrice{
+  width: 5%;
+}
+
+.thOptions{
+  width: 3%
+}
+
+.thImg{
+  width: 5%;
+}
+
+.containerToolUsers{
+  border: solid #FFD505 1.5px;
+  border-bottom-style: none;
+  border-left-style: none;
+  border-right-style: none;
+  margin-left: 25px;
+  margin-right: 25px;
+  margin-top: 25px;
+}
+
+.formCreateUSer{
+  align-items: center;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.containerFindUser{
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.containertableAllUsers{
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.formInputUer{
+  padding: 5px;
+  width: 20%;
+  height: 20px;
+  border: 1px #9F9EF1 solid;
+}
+
+.formInputSearchUser{
+  width: 20%;
+  height: 20px;
+}
+
+.selectRol{
+  width: 15%;
+  height: 30px;
+}
+
+.btnCreateUser{
+  background: #F4D03F;
+  width: 100px;
+  height: 32px;
+  border-radius: 10px;
+}
+
+.containerToolProducts{
+  display: inline-flex;
+  flex-direction: row;
+  padding-bottom: 15px;
+  width: 100%;
+  height: 100%;
+  border: solid #FFD505 1.5px;
+  border-bottom-style: none;
+  border-left-style: none;
+  border-right-style: none;
+  margin-top: 0px;
+  margin-left: 15px;
+  margin-right: 15px;
+
+}
+.containerAllProducts{
+  margin-right: 35px;
+  padding-top: 20px;
+  width: 60%;
+  margin-top: 20px;
+}
+
+.seccionFormCreateProducts{
+  width: 40%;
+  margin-top: 0px;
+  padding-top: 80px;
+}
+
+.formCreateProducts{
+  background: #C27B51;
+  text-align: center;
+  border: solid white 2px;
+  border-radius: 25px;
+  margin:auto;
+  width: 70%;
+  height: 200px;
+  padding-top: 15px;
+  
+  /* display: flex; 
+  flex-wrap: wrap; */
+  justify-content: center; 
+}
+
+.inputCreateProduct{
+  margin: 5px;
+  width: 80%;
+  height: 20px;
+}
+
+.btnCreateProduct{
+  background-color: #F4D03F ;
+  border-radius: 10px;
+  border: solid #35351D 1px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding: 4px;
+  width: 30%;
+  color: black;
+  margin-right: 8px;
+}
+
+.btnCancelProduct{
+  background-color: #F44A3F ;
+  border-radius: 10px;
+  border: solid #35351D 1px;
+  padding: 4px;
+  width: 30%;
+  color: black;
+}
+
+.sectionSearchProduct{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+  margin-top: 0;
+  
+}
+
+.formInputSearchProduct{
+  width: 40%;
+  height: 20px;
+}
+
+.btntable{
+  font-size: 10px;
+  margin: 2px;
+  border-radius: 3px;
+}
+
+.containertableAllProducts{
+  width: 93%;
+  margin: auto;
+}
+
+.btnEditar{
+  background-color: #F4D03F;
+  border: none;
+}
+
+.btnDelete{
+  background-color: #FC6258;
+  border: none;
+}
+
+.selectType{
+  width: 83%;
+  height: 25px;
+  margin-top: 7px;
+}
