--- a/aplication/src/App.css
+++ b/aplication/src/App.css
@@ -169,8 +169,6 @@ body {
   background-color: #778472;
 }
 
-
-
 .menuDesplegable{
   display: inline-flex;
   flex-wrap: wrap;
@@ -282,7 +280,21 @@ body {
   margin: auto;
 }
 
-.svg-inline--fa.fa-w-14 {
+.fontTrash{
+  color: white;
+}
+
+.btnTrash{
+  background-color: #252525;
+  border: none;
+}
+
+.faUser {
+  width: 0.875em;
+  color: #F37328;
+}
+
+.faUnlock {
   width: 0.875em;
   color: #F37328;
 }
@@ -531,3 +543,104 @@ th{
   height: 25px;
   margin-top: 7px;
 }
+
+.sctPedidos{
+  /* margin-top: 10px; */
+  width: 80%;
+  margin: 20px auto;
+}
+
+.lblProduct{
+display: inline-flex;
+width: 150px;
+/* border-width:1px;
+border-style:solid; */
+font-family:"Franklin Gothic', 'Arial Narrow', Arial, sans-serif";
+font-size:15px;
+color:white;
+}
+
+.lblPrice{
+display: inline-flex;
+width: 100px;
+/* border-width:1px;
+border-style:solid; */
+font-family:"Franklin Gothic', 'Arial Narrow', Arial, sans-serif";
+font-size:15px;
+color:white;
+}
+
+.faMinus{
+  color: white;
+  font-size: 10px;
+  margin-right: 3px;
+}
+
+.faPlus{
+  color: white;
+  font-size: 10px;
+  margin-left: 3px;
+  margin-right: 30px;
+}
+
+.dvBtnSendOrder{
+  display: flex;
+  justify-content: center;
+  margin: 60px;
+}
+
+.btnSend{
+  background: #FFD505;
+  border-radius: 5px;
+  width: 100px;
+  height: 32px;
+  border: none;
+
+}
+
+.lblTotal{
+  display: inline-flex;
+width: 200px;
+font-family:"Franklin Gothic', 'Arial Narrow', Arial, sans-serif";
+font-size:15px;
+color:white;
+margin-left: 60px;
+}
+
+.lblNumberTotal{
+  color: white;
+  font-family:"Franklin Gothic', 'Arial Narrow', Arial, sans-serif";
+}
+
+.dvTotal{
+  margin-top: 30px;
+}
+
+.containerOrders{
+  display: flex;
+  justify-content: space-around;
+
+
+}
+
+.containerOrders h1{
+  display: flex;
+  justify-content: center;
+
+}
+.columnPending{
+ color: #F37328;
+ width: 30%;
+}
+
+.columnDelivering{
+  color: #FFD505;
+  width: 30%;
+}
+
+.columnDelivered{
+  color: #02B92A;
+  font-family:"Franklin Gothic', 'Arial Narrow', Arial, sans-serif";
+  width: 30%;
+}
+
